--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "server",
     "main": "api.js",
+    "engines": {
+        "node": "17.3.0",
+        "npm": "8.3.0"
+    },
     "scripts": {
         "start": "node api.js",
         "heroku-postbuild": "cd client && npm install && npm run build"
